# SkullbasherTD

./: .gitignore  README.md
SRE_project/: CMakeLists.txt  Makefile  SimpleRenderEngineProject.cbp  cmake_install.cmake
SRE_project/Debug/: CMakeCache.txt  Makefile  SimpleRenderEngineProject.cbp  cmake_install.cmake
SRE_project/Debug/project/: Makefile  cmake_install.cmake
SRE_project/Debug/project/assignment_1_asteroids/: Makefile  assignment_1_asteroids.exp  cmake_install.cmake
SRE_project/Debug/project/assignment_2_wolf/: Makefile  assignment_2_wolf.exp  assignment_2_wolf.lib
SRE_project/Debug/project/assignment_3_bird/: Makefile  assignment_3_bird.exp  cmake_install.cmake
SRE_project/Debug/project/assignment_4_platformer/: Makefile  assignment_4_platformer.exp  assignment_4_platformer.lib  cmake_install.cmake
SRE_project/Debug/submodules/SimpleRenderEngine/: Makefile  SimpleRenderEngine.cbp  cmake_install.cmake
SRE_project/Release/OpenAL-soft_build/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  OpenAL.vcxproj  alrecord.vcxproj.filters  build_version.vcxproj  openal-info.vcxproj.filters
SRE_project/Release/libsndfile_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackSourceConfig.cmake  Continuous.vcxproj.filters  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  channel_test.vcxproj  chunk_test.vcxproj  chunk_test.vcxproj.filters  error_test.vcxproj.filters  external_libs_test.vcxproj  external_libs_test.vcxproj.filters  floating_point_test.vcxproj  format_check_test.vcxproj  format_check_test.vcxproj.filters  header_test.vcxproj.filters  headerless_test.vcxproj  list_formats.vcxproj  list_formats.vcxproj.filters  locale_test.vcxproj  long_read_write_test.vcxproj.filters  lossy_comp_test.vcxproj.filters  make_sine.vcxproj.filters  misc_test.vcxproj  misc_test.vcxproj.filters  multi_file_test.vcxproj  multi_file_test.vcxproj.filters  ogg_opus_test.vcxproj  ogg_test.vcxproj.filters  pcm_test.vcxproj.filters  peak_chunk_test.vcxproj  (+45 more)
SRE_project/docs/: SkullBasherTD.docx
SRE_project/docs/diagrams/: Animation.drawio  AnimatorComponent.drawio  BulletDebugDraw.drawio  BulletPhysics.drawio  CameraComponent.drawio  CoinCollisionHandler.drawio  CoinComponent.drawio  CollisionHandler.drawio  Component.drawio  CrystalHealth.drawio  EnemyCollisionHandler.drawio  EnemyComponent.drawio  GameManager.drawio  GameObject.drawio  GhostObject.drawio  GuiManager.drawio  HealthComponent.drawio  LevelGuiManager.drawio  LevelScene.drawio  Light.drawio  Main.drawio  MainMenuGuiManager.drawio  MainMenuScene.drawio  Model.drawio  ModelRenderer.drawio  MusicBuffer.drawio  Pathfinder.drawio  PersonController.drawio  PlayerCollisonHandler.drawio  PlaylistComponent.drawio  ProjectileCollisionHandler.drawio  ProjectileLifespanComponent.drawio  Ray.drawio  Renderable.drawio  RenderableGui.drawio  RigidBody.drawio  Scene.drawio  SceneManager.drawio  ScheduleManager.drawio  Scriptable.drawio  (+12 more)
SRE_project/project/: CMakeLists.txt  Makefile  cmake_install.cmake
SRE_project/project/assignment_1_asteroids/: Asteroid.cpp  Asteroid.hpp  AsteroidFactory.cpp  AsteroidFactory.hpp  AsteroidsGame.cpp  AsteroidsGame.hpp  CMakeLists.txt  GameObject.cpp  GameObject.hpp  Laser.cpp  Laser.hpp  Makefile  SpaceShip.cpp  SpaceShip.hpp  assignment_1_asteroids.exp  assignment_1_asteroids.lib
SRE_project/project/assignment_2_wolf/: CMakeLists.txt  Makefile  Wolf3D.cpp  Wolf3D.hpp  WorldMap.cpp  cmake_install.cmake
SRE_project/project/assignment_3_bird/: BirdController.cpp  BirdController.hpp  BirdGame.cpp  BirdGame.hpp  CMakeLists.txt  Makefile  PhysicsComponent.cpp  PhysicsComponent.hpp  assignment_3_bird.exp  assignment_3_bird.lib
SRE_project/project/assignment_4_platformer/: BirdMovementComponent.cpp  CMakeLists.txt  CharacterController.cpp  CharacterController.hpp  Makefile  MovingPlatformComponent.cpp  PlatformerGame.cpp  ScriptComponent.cpp  ScriptComponent.hpp
SRE_project/project/skull_basher_td/: 05_obj-viewer.cpp  CMakeLists.txt  FirstPersonController.cpp  FirstPersonController.hpp  GameManager.cpp  GameManager.hpp  GuiManager.cpp  GuiManager.hpp  LevelGuiManager.cpp  LevelGuiManager.hpp  MainMenuGuiManager.cpp  MainMenuGuiManager.hpp  Tower.cpp  Tower.hpp  Wolf3D.cpp  Wolf3D.hpp  WorldMap.cpp  level0.json
SRE_project/project/skull_basher_td/Debug/: imgui.ini  level0.json
SRE_project/project/skull_basher_td/architecture/: Animation.cpp  Animation.hpp  Animator.cpp  Animator.hpp  AnimatorComponent.cpp  AnimatorComponent.hpp  BulletPhysics.cpp  Camera.cpp  Camera.hpp  CameraComponent.cpp  CameraComponent.hpp  CoinComponent.hpp  CollisionHandler.hpp  Component.cpp  Component.hpp  CustomCollisionHandler.cpp  CustomerCollisionHandler.hpp  EnemyCollisionHandler.cpp  EnemyCollisionHandler.hpp  EnemyComponent.cpp  EnemyComponent.hpp  FirstPersonController.cpp  FirstPersonController.hpp  GameObject.cpp  GameObject.hpp  GuiCrosshair.cpp  GuiCrosshair.hpp  GuiGameInfo.cpp  GuiGameInfo.hpp  HomingComponent.cpp  HomingComponent.hpp  LevelScene.cpp  LevelScene.hpp  Light.hpp  LightComponent.hpp  Main.cpp  Main.hpp  MainMenuScene.cpp  MainMenuScene.hpp  Model.cpp  (+63 more)
SRE_project/project/skull_basher_td/assets/: ArrowTower.mtl  Coins.mtl  Floating_Banner.mtl  ball.mtl  box.mtl  crossbow_bolt.mtl  crossbow_bolt_2.mtl  crystal.mtl  hammer.mtl  lowpoly_crossbow_2_3.mtl  lowpoly_crossbow_2_4.mtl  lowpoly_crossbow_2_5.mtl  pineTreeSmall.mtl  pineTreeTall.mtl
SRE_project/project/skull_basher_td/data/: towers.json
SRE_project/project/skull_basher_td/maps/: SkullBasherTDLevel0.json  SkullBasherTDLevel1.json  SkullBasherTDLevel2.json  SkullBasherTDLevel3.json  SkullBasherTDLevel4.json  SkullBasherTDMainMenu.json
SRE_project/project/skull_basher_td/scripts/: aiming.lua  reloading.lua  (+2 more)
SRE_project/submodules/SimpleRenderEngine/: CMakeLists.txt  Makefile  SimpleRenderEngine.cbp  cmake_install.cmake
(+174 files in other folders)
